Coctails api, coctails dispayed in app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">CoronaZP20T</string>
-    <string name="app_title">Corona App</string>
+    <string name="app_name">Coctail</string>
+    <string name="app_title">Coctail App</string>
 
     <string name="login_username">Username</string>
     <string name="login_password">Password</string>
@@ -11,9 +11,9 @@
     <string name="set_email">Email</string>
     <string name="invalid_email">Wrong Email</string>
     <string name="new_user">Created New User</string>
-    <string name="search_loading_data">Please wait for covid data to be displayed</string>
+    <string name="search_loading_data">Please wait for Coctail data to be displayed</string>
     <string name="search_error_reading_data">Couldnt read data from API. For more information: </string>
     <string name="search_no_results">No search results found for query: </string>
-    <string name="search_found_entries_from_api">Found total number of corona entries: </string>
+    <string name="search_found_entries_from_api">Found total number of coctails entries: </string>
 
 </resources>
